# 3d-pedestrian-detection

./: CMakeLists.txt  Neofusion_RGB_25_02_2020_INFO.txt  PCL_Viewer_Parameters.txt  README.md
include/image_pedestrian_detector/: evaluation.hpp  image_pedestrian_detection.hpp
include/labeling_transfer/: labeling_transfer.hpp
include/point_cloud_pedestrian_detector/: point_cloud_utils.hpp
include/utils/: boxes.hpp  histogram.hpp  maps.hpp
scripts/frustum/: downsample_bbp_frustum.py  remove_intensity_frustrums.py  sort_scenes_results.py  write_frustums_pickles.py
scripts/plots/: plot_compare.py  plot_curves.py  plot_histogram.py  plot_prec_recall.py
scripts/pointnet/: downsample_bbnp.py  downsample_bbp.py  ply_to_hdf5.py
src/image_pedestrian_detector/: evaluate_results.cpp  evaluation.cpp  generate_non_pedestrian_boxes.cpp  get_precision_recall.cpp  image_detect_pedestrians.cpp  image_pedestrian_detection.cpp
src/labeling_transfer/: labeling_transfer.cpp  transfer_labels.cpp
src/point_cloud_pedestrian_detector/: bin_to_ply.cpp  check_normalized_point_clouds.cpp  display_point_cloud.cpp  organize_ply_hdf5.cpp  point_cloud_utils.cpp  preprocess_bbp_point_clouds.cpp
src/utils/: boxes.cpp  generate_maps.cpp  get_boxes_stats.cpp  histogram.cpp  maps.cpp
